Update on Overleaf.

--- a/proceedings.tex
+++ b/proceedings.tex
@@ -179,7 +179,7 @@
 % page 2 is describing the community you are targeting
 %sense making process in dataviz community?
 %spend time how to define data viz community - where those communities are the same and where they're different.
-Foobar Computers have changed how we make art. One of the most significant examples of this change is encapsulated by the practice of \textit{computational generative art}. Definitions vary, but broadly speaking, generative art is the practice of describing autonomous computational processes that read information from a predefined environment or context and operate on this input to create perceivable artistic output~\cite{shiffman2012nature,reas2010form,doi:10.1080/14626268.2012.709940}. Generative art is relevant to a broad range of domains including visual art, music, and architecture and offers powerful creative opportunities. These include practical benefits like efficiency and speed, expressive benefits like flexibility and increased capacity for exploration, and structural benefits like scalability and abstraction~\cite{mitchell1990}. Moreover, the autonomous nature of generative art practice offers new ways to think about art creation, by treating the computer as an active creative partner~\cite{reas2010form}. 
+Computers have changed how we make art. One of the most significant examples of this change is encapsulated by the practice of \textit{computational generative art}. Definitions vary, but broadly speaking, generative art is the practice of describing autonomous computational processes that read information from a predefined environment or context and operate on this input to create perceivable artistic output~\cite{shiffman2012nature,reas2010form,doi:10.1080/14626268.2012.709940}. Generative art is relevant to a broad range of domains including visual art, music, and architecture and offers powerful creative opportunities. These include practical benefits like efficiency and speed, expressive benefits like flexibility and increased capacity for exploration, and structural benefits like scalability and abstraction~\cite{mitchell1990}. Moreover, the autonomous nature of generative art practice offers new ways to think about art creation, by treating the computer as an active creative partner~\cite{reas2010form}. 
 
 Efforts to develop tools for generative artists have primarily focused on low-level ``creative coding'' programming tools~\cite{grasshopper,processing,openframeworks}. Though varied somewhat, these approaches generally use an imperative programming paradigm and an external textual or visual programming representation. Creative coding programming languages are highly expressive, yet they retain the challenges of general purpose languages in that they are often highly complex, yet brittle~\cite{mccullough}, present steep initial learning barriers~\cite{Jacobs:2017:SEP:3025453.3025927}, and frequently exclusively emphasize top-down planning-oriented working styles~\cite{Schachman:2012:API:2384592.2384594}. Research efforts to address the learning challenges of representational creative coding platforms have centered around developing high-level direct-manipulation systems~\cite{Schachman:2012:API:2384592.2384594,Jacobs:2017:SEP:3025453.3025927,Hoarau,kitty}, that enable artists to manipulate programmatic-like relationships through direct selection. Direct-manipulation tools can be easier to get started with than representational programming languages, yet to this point, available systems also place more constraints on expressiveness and flexibility.
 
